--- a/archives/toutiao-search/2024-04-02.md
+++ b/archives/toutiao-search/2024-04-02.md
@@ -1,56 +1,70 @@
 # 2024-04-02
 
-共 124 条
+共 137 条
 
 <!-- BEGIN TOUTIAO -->
-<!-- 最后更新时间 Tue Apr 02 2024 08:25:31 GMT+0800 (China Standard Time) -->
+<!-- 最后更新时间 Tue Apr 02 2024 09:42:51 GMT+0800 (China Standard Time) -->
 1. [媒体：提灯定损房东是怎么炼成的](https://so.toutiao.com/search?keyword=媒体：提灯定损房东是怎么炼成的)
-1. [以色列空袭伊朗驻叙使馆建筑致7死](https://so.toutiao.com/search?keyword=以色列空袭伊朗驻叙使馆建筑致7死)
+1. [台媒：台军暂缓在金门对海实弹射击](https://so.toutiao.com/search?keyword=台媒：台军暂缓在金门对海实弹射击)
 1. [有一种叫云南的生活](https://so.toutiao.com/search?keyword=有一种叫云南的生活)
 1. [南昌大风为什么能把人从被窝里吹走](https://so.toutiao.com/search?keyword=南昌大风为什么能把人从被窝里吹走)
-1. [女子32万买健身课被安排一天六七节](https://so.toutiao.com/search?keyword=女子32万买健身课被安排一天六七节)
+1. [以色列空袭伊朗驻叙使馆建筑致7死](https://so.toutiao.com/search?keyword=以色列空袭伊朗驻叙使馆建筑致7死)
+1. [曝任正非禁止余承东说遥遥领先](https://so.toutiao.com/search?keyword=曝任正非禁止余承东说遥遥领先)
 1. [房价为何看起来没跌很多](https://so.toutiao.com/search?keyword=房价为何看起来没跌很多)
-1. [伊朗谴责以袭击伊驻叙大使馆领事处](https://so.toutiao.com/search?keyword=伊朗谴责以袭击伊驻叙大使馆领事处)
-1. [开封王婆：不敢带货怕被说物质](https://so.toutiao.com/search?keyword=开封王婆：不敢带货怕被说物质)
-1. [提灯定损房东女儿被开除？当地回应](https://so.toutiao.com/search?keyword=提灯定损房东女儿被开除？当地回应)
-1. [女子遛狗偶遇搜救犬](https://so.toutiao.com/search?keyword=女子遛狗偶遇搜救犬)
-1. [政协委员撞死人大代表获刑15年](https://so.toutiao.com/search?keyword=政协委员撞死人大代表获刑15年)
-1. [湖南一地辟谣幼师针扎虐童](https://so.toutiao.com/search?keyword=湖南一地辟谣幼师针扎虐童)
-1. [南昌强对流天气致人坠亡 警方介入](https://so.toutiao.com/search?keyword=南昌强对流天气致人坠亡+警方介入)
-1. [男子上王婆说媒相亲下台被甩](https://so.toutiao.com/search?keyword=男子上王婆说媒相亲下台被甩)
-1. [马英九再访大陆 台湾有什么期待](https://so.toutiao.com/search?keyword=马英九再访大陆+台湾有什么期待)
-1. [实探南昌3人被大风吹落坠亡现场](https://so.toutiao.com/search?keyword=实探南昌3人被大风吹落坠亡现场)
-1. [网友：整个上饶被“提灯定损”牵连](https://so.toutiao.com/search?keyword=网友：整个上饶被“提灯定损”牵连)
-1. [美国限制中国企业获取AI芯片](https://so.toutiao.com/search?keyword=美国限制中国企业获取AI芯片)
-1. [祖孙俩连人带床垫被风卷下楼坠亡](https://so.toutiao.com/search?keyword=祖孙俩连人带床垫被风卷下楼坠亡)
-1. [大V：沪指创新高不改变圆弧顶结构](https://so.toutiao.com/search?keyword=大V：沪指创新高不改变圆弧顶结构)
-1. [提灯定损事件会影响江西旅游经济吗](https://so.toutiao.com/search?keyword=提灯定损事件会影响江西旅游经济吗)
-1. [南昌突起强风 男子抱住大棚被吹飞](https://so.toutiao.com/search?keyword=南昌突起强风+男子抱住大棚被吹飞)
-1. [浙江余姚通报公职人员醉驾涉黑问题](https://so.toutiao.com/search?keyword=浙江余姚通报公职人员醉驾涉黑问题)
-1. [业主侵占公摊区域 邻居装铁门回应](https://so.toutiao.com/search?keyword=业主侵占公摊区域+邻居装铁门回应)
-1. [南昌夫妻分房睡妻子被吹下楼坠亡](https://so.toutiao.com/search?keyword=南昌夫妻分房睡妻子被吹下楼坠亡)
 1. [伊朗大使：将果断回应以色列行动](https://so.toutiao.com/search?keyword=伊朗大使：将果断回应以色列行动)
-1. [外资买走万达 下一个会是万科吗](https://so.toutiao.com/search?keyword=外资买走万达+下一个会是万科吗)
+1. [菲媒：菲律宾人必须反对与中国开战](https://so.toutiao.com/search?keyword=菲媒：菲律宾人必须反对与中国开战)
+1. [女子32万买健身课被安排一天六七节](https://so.toutiao.com/search?keyword=女子32万买健身课被安排一天六七节)
+1. [南昌强对流天气致人坠亡 警方介入](https://so.toutiao.com/search?keyword=南昌强对流天气致人坠亡+警方介入)
+1. [湖南一地辟谣幼师针扎虐童](https://so.toutiao.com/search?keyword=湖南一地辟谣幼师针扎虐童)
+1. [政协委员撞死人大代表获刑15年](https://so.toutiao.com/search?keyword=政协委员撞死人大代表获刑15年)
+1. [韩美娟也来模仿张元英转圈了](https://so.toutiao.com/search?keyword=韩美娟也来模仿张元英转圈了)
+1. [男子上王婆说媒相亲下台被甩](https://so.toutiao.com/search?keyword=男子上王婆说媒相亲下台被甩)
+1. [实探南昌3人被大风吹落坠亡现场](https://so.toutiao.com/search?keyword=实探南昌3人被大风吹落坠亡现场)
+1. [提灯定损房东女儿被开除？当地回应](https://so.toutiao.com/search?keyword=提灯定损房东女儿被开除？当地回应)
+1. [冯绍峰谈到儿子眼圈红了](https://so.toutiao.com/search?keyword=冯绍峰谈到儿子眼圈红了)
+1. [祖孙俩连人带床垫被风卷下楼坠亡](https://so.toutiao.com/search?keyword=祖孙俩连人带床垫被风卷下楼坠亡)
+1. [网友：整个上饶被“提灯定损”牵连](https://so.toutiao.com/search?keyword=网友：整个上饶被“提灯定损”牵连)
+1. [浙江余姚通报公职人员醉驾涉黑问题](https://so.toutiao.com/search?keyword=浙江余姚通报公职人员醉驾涉黑问题)
+1. [南昌突起强风 男子抱住大棚被吹飞](https://so.toutiao.com/search?keyword=南昌突起强风+男子抱住大棚被吹飞)
+1. [女子遛狗偶遇搜救犬](https://so.toutiao.com/search?keyword=女子遛狗偶遇搜救犬)
+1. [马英九再访大陆 台湾有什么期待](https://so.toutiao.com/search?keyword=马英九再访大陆+台湾有什么期待)
+1. [南昌夫妻分房睡妻子被吹下楼坠亡](https://so.toutiao.com/search?keyword=南昌夫妻分房睡妻子被吹下楼坠亡)
+1. [开封王婆：不敢带货怕被说物质](https://so.toutiao.com/search?keyword=开封王婆：不敢带货怕被说物质)
+1. [业主侵占公摊区域 邻居装铁门回应](https://so.toutiao.com/search?keyword=业主侵占公摊区域+邻居装铁门回应)
+1. [约800人被列入巴黎奥运“黑名单”](https://so.toutiao.com/search?keyword=约800人被列入巴黎奥运“黑名单”)
 1. [南昌红谷滩1600多棵树一夜被吹倒](https://so.toutiao.com/search?keyword=南昌红谷滩1600多棵树一夜被吹倒)
-1. [陈震回应网友威马评论](https://so.toutiao.com/search?keyword=陈震回应网友威马评论)
-1. [与多名女同事接吻乌军官自愿上前线](https://so.toutiao.com/search?keyword=与多名女同事接吻乌军官自愿上前线)
-1. [小米汽车：SU7碰撞测试超过40项](https://so.toutiao.com/search?keyword=小米汽车：SU7碰撞测试超过40项)
-1. [网友建议彻查提灯定损房东是否违建](https://so.toutiao.com/search?keyword=网友建议彻查提灯定损房东是否违建)
+1. [什么是下击暴流？破坏力超台风](https://so.toutiao.com/search?keyword=什么是下击暴流？破坏力超台风)
+1. [提灯定损事件会影响江西旅游经济吗](https://so.toutiao.com/search?keyword=提灯定损事件会影响江西旅游经济吗)
+1. [美国限制中国企业获取AI芯片](https://so.toutiao.com/search?keyword=美国限制中国企业获取AI芯片)
+1. [汕头原市长郑剑戈被查](https://so.toutiao.com/search?keyword=汕头原市长郑剑戈被查)
+1. [进地库不减速 轿车撞穿墙掉通风井](https://so.toutiao.com/search?keyword=进地库不减速+轿车撞穿墙掉通风井)
+1. [伊朗谴责以袭击伊驻叙大使馆领事处](https://so.toutiao.com/search?keyword=伊朗谴责以袭击伊驻叙大使馆领事处)
+1. [外资买走万达 下一个会是万科吗](https://so.toutiao.com/search?keyword=外资买走万达+下一个会是万科吗)
 1. [俄对乌用大威力炸弹 爆炸云高千米](https://so.toutiao.com/search?keyword=俄对乌用大威力炸弹+爆炸云高千米)
+1. [4楼男子厨房抽烟2楼邻居找上门](https://so.toutiao.com/search?keyword=4楼男子厨房抽烟2楼邻居找上门)
+1. [向太发文怀念张国荣](https://so.toutiao.com/search?keyword=向太发文怀念张国荣)
+1. [小米汽车：SU7碰撞测试超过40项](https://so.toutiao.com/search?keyword=小米汽车：SU7碰撞测试超过40项)
+1. [大V：沪指创新高不改变圆弧顶结构](https://so.toutiao.com/search?keyword=大V：沪指创新高不改变圆弧顶结构)
+1. [马英九率台湾青年抵达深圳](https://so.toutiao.com/search?keyword=马英九率台湾青年抵达深圳)
+1. [与多名女同事接吻乌军官自愿上前线](https://so.toutiao.com/search?keyword=与多名女同事接吻乌军官自愿上前线)
+1. [叙伊外长就大马士革遭以空袭通电话](https://so.toutiao.com/search?keyword=叙伊外长就大马士革遭以空袭通电话)
+1. [卡友举报江西汽修店：千元费用变1.7万](https://so.toutiao.com/search?keyword=卡友举报江西汽修店：千元费用变1.7万)
+1. [男性也有最佳生育年龄](https://so.toutiao.com/search?keyword=男性也有最佳生育年龄)
+1. [赵丽颖这手劲一如既往的大](https://so.toutiao.com/search?keyword=赵丽颖这手劲一如既往的大)
+1. [带娃漂流遭扔石头 涉事人员被拘](https://so.toutiao.com/search?keyword=带娃漂流遭扔石头+涉事人员被拘)
+1. [女子大声喝止吵闹小孩与家长起争执](https://so.toutiao.com/search?keyword=女子大声喝止吵闹小孩与家长起争执)
+1. [巴黎奥运会到底出了什么问题](https://so.toutiao.com/search?keyword=巴黎奥运会到底出了什么问题)
+1. [陈震回应网友威马评论](https://so.toutiao.com/search?keyword=陈震回应网友威马评论)
+1. [网友建议彻查提灯定损房东是否违建](https://so.toutiao.com/search?keyword=网友建议彻查提灯定损房东是否违建)
 1. [雷军再次请大家吐槽SU7时口下留情](https://so.toutiao.com/search?keyword=雷军再次请大家吐槽SU7时口下留情)
 1. [媒体谈解放军为何要在中缅边境演习](https://so.toutiao.com/search?keyword=媒体谈解放军为何要在中缅边境演习)
-1. [马英九率台湾青年抵达深圳](https://so.toutiao.com/search?keyword=马英九率台湾青年抵达深圳)
 1. [江西灵山景区玩梗：不收磨损费](https://so.toutiao.com/search?keyword=江西灵山景区玩梗：不收磨损费)
-1. [4楼男子厨房抽烟2楼邻居找上门](https://so.toutiao.com/search?keyword=4楼男子厨房抽烟2楼邻居找上门)
-1. [进地库不减速 轿车撞穿墙掉通风井](https://so.toutiao.com/search?keyword=进地库不减速+轿车撞穿墙掉通风井)
 1. [高校1.4亿建留学生宿舍？校方回应](https://so.toutiao.com/search?keyword=高校1.4亿建留学生宿舍？校方回应)
-1. [女子大声喝止吵闹小孩与家长起争执](https://so.toutiao.com/search?keyword=女子大声喝止吵闹小孩与家长起争执)
 1. [南昌为何会突发强对流天气](https://so.toutiao.com/search?keyword=南昌为何会突发强对流天气)
 1. [父亲戒烟酒多年 临终前儿子陪喝酒](https://so.toutiao.com/search?keyword=父亲戒烟酒多年+临终前儿子陪喝酒)
 1. [婆婆担心产后儿媳请吊车将其送上楼](https://so.toutiao.com/search?keyword=婆婆担心产后儿媳请吊车将其送上楼)
 1. [马英九为何选择参观大疆腾讯比亚迪](https://so.toutiao.com/search?keyword=马英九为何选择参观大疆腾讯比亚迪)
 1. [日本岩手县沿海地区发生6.1级地震](https://so.toutiao.com/search?keyword=日本岩手县沿海地区发生6.1级地震)
-1. [卡友举报江西汽修店：千元费用变1.7万](https://so.toutiao.com/search?keyword=卡友举报江西汽修店：千元费用变1.7万)
 1. [24岁小伙为上台找王婆说媒蹲了4天](https://so.toutiao.com/search?keyword=24岁小伙为上台找王婆说媒蹲了4天)
 1. [实测小米SU7代客泊车功能](https://so.toutiao.com/search?keyword=实测小米SU7代客泊车功能)
 1. [黄金价格再创历史新高](https://so.toutiao.com/search?keyword=黄金价格再创历史新高)
@@ -68,7 +82,6 @@
 1. [雨夜一婴儿爬上马路 市民紧急救援](https://so.toutiao.com/search?keyword=雨夜一婴儿爬上马路+市民紧急救援)
 1. [南昌狂风屋顶被“剃头”菜棚被卷走](https://so.toutiao.com/search?keyword=南昌狂风屋顶被“剃头”菜棚被卷走)
 1. [媒体：一批大城市打工人不再租房](https://so.toutiao.com/search?keyword=媒体：一批大城市打工人不再租房)
-1. [巴黎奥运会到底出了什么问题](https://so.toutiao.com/search?keyword=巴黎奥运会到底出了什么问题)
 1. [男子车辆超员将女儿藏在后座角落](https://so.toutiao.com/search?keyword=男子车辆超员将女儿藏在后座角落)
 1. [普京幽默化解位置被州长误坐的尴尬](https://so.toutiao.com/search?keyword=普京幽默化解位置被州长误坐的尴尬)
 1. [央媒：规培医生不该成为廉价劳动力](https://so.toutiao.com/search?keyword=央媒：规培医生不该成为廉价劳动力)
